--- a/ng-app/bower.json
+++ b/ng-app/bower.json
@@ -9,7 +9,9 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "angular-xeditable": "~0.1.9",
+    "angular-devise": "~1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
