--- a/ng-app/bower.json
+++ b/ng-app/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-xeditable": "~0.1.9",
-    "angular-devise": "~1.1.0"
+    "angular-devise": "~1.1.0",
+    "ng-token-auth": "~0.0.28"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
